# Claudia

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  biome.json  overview.md  package-lock.json  package.json  roadmap.md  sea-config.json  start.bat  techstack.md  todo.md
.claude/: settings.json
.claude/commands/: demo.md  stats.md  todo.md
.claude/guidelines/work-discipline/: doc-impact-mirror.md  index.md  model-tiering.md  path-portability.md
.claude/hooks/: agent-model-pretool.sh  workflow-model-posttool.sh  workflow-model-pretool.sh
.claude/rules/: config-overlay.md  index.md  svelte.md
.claude/skills/: .catalog
.claude/skills/check-docs-consistency/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/frontend-soc-scan/: SKILL.md
.claude/skills/javascript-pro/: .served
.claude/skills/journey-simulation/: SKILL.md
.claude/skills/merge/: SKILL.md
.claude/skills/release/: SKILL.md  (+1 more)
.githooks/: pre-commit
.github/workflows/: build.yml
docs/: audit-fixes.md  backlog.md  building.md  design-system.html  overview.md  privacy.md  product-mock.html  techstack.md  theme-demo.html  tooltips.md  troubleshooting.md
docs/help/: building.md  privacy.md  troubleshooting.md
docs/specs/: avatars.md  dashboard.md  hooks.md  index.md  sessions.md  spawning.md
scripts/: build-sea.js  bundle-server.js  clean.js  package-we.js  sea-entry-template.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
we-template/: index.html  project.json
(+36 files in other folders)
